--- a/index.html
+++ b/index.html
@@ -14,7 +14,22 @@
           <div class="link-2">Header link three</div>
           <div class="link-3">Header link three</div>
        </div>
+    </div> 
+    <div class="body-1">
+        <div class=section-1">
+            <div class="part-1">
+              <div>Lorem, ipsum dolor sit amet consectetur.</div>
+            </div>
+            <div class="part-2">
+                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem harum qui id.</div>
+            </div>
+            <div class="part-3">
+                <button>Sign up</button>
+            </div>
+        </div>
+        <div class="image">
+            <div>Image place holder</div>
+        </div>
     </div>
-
 </body>
 </html>
