Add to second body. add style is css Started the second body, added all the information in html. Got most of the styling done.

--- a/index.html
+++ b/index.html
@@ -31,5 +31,22 @@
             <div>Image place holder</div>
         </div>
     </div>
+    <div class="body-2">
+        <div class="rando">Some random info</div>
+        <div class="pic-info">
+          <div class="boxes">
+            <div class="box-1">box one</div>
+            <div class="box-2">box two</div>
+            <div class="box-3">box three</div>
+            <div class="box-4">box four</div>
+          </div>
+          <div class="words">
+            <div class="exp-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
+            <div class="exp-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
+            <div class="exp-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
+            <div class="exp-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
