Add rest of page and complete main structure Added the remaining sections of the page and got it styled.

--- a/index.html
+++ b/index.html
@@ -48,5 +48,23 @@
           </div>
         </div>
     </div>
+    <div class="body-3">
+      <div class="mass">
+        <div class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste molestias ut eligendi soluta. Neque officia distinctio, enim magnam ullam facere id? Atque consequuntur facilis architecto recusandae quaerat facere odit nulla!</div>
+        <div class="credit">-booty man</div>
+      </div>
+    </div>
+    <div class="body-4">
+      <div class="alert">
+        <div class="text">
+          <div class="call">Call to action! It's time!</div>
+          <div class="call-subtext">Sign up for our product by clicking the button right over there!</div>
+        </div>
+        <button class="sign-up">Sign Up!</button>
+      </div>
+  </div>
+  <div class="footer">
+    <div class="footer-text">Copyright © The Odin Project 2024</div>
+  </div>
 </body>
 </html>
