Add images and replace filler words Added images to to place holder spots and replaced the filler words with content

--- a/index.html
+++ b/index.html
@@ -8,57 +8,57 @@
 </head>
 <body>
     <div class="header">
-       <div class="logo">Header Logo</div>
+       <div class="logo">Slow Rollers Skate Shop</div>
        <div class="links">
-          <div class="link-1">Header link one</div>
-          <div class="link-2">Header link three</div>
-          <div class="link-3">Header link three</div>
+          <div class="link-1">About</div>
+          <div class="link-2">Locations</div>
+          <div class="link-3">Store Hours</div>
        </div>
     </div> 
     <div class="body-1">
         <div class=section-1">
             <div class="part-1">
-              <div>Lorem, ipsum dolor sit amet consectetur.</div>
+              <div>The best skate shop you'll ever go to!</div>
             </div>
             <div class="part-2">
-                <div>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem harum qui id.</div>
+                <div>Sign up for our news letter to stay up to date with new releases and get early access to new gear</div>
             </div>
             <div class="part-3">
                 <button>Sign up</button>
             </div>
         </div>
         <div class="image">
-            <div>Image place holder</div>
+            <img src="./images/skate-room.jpg" alt="Skate Shop" height="240" width="420">
         </div>
     </div>
     <div class="body-2">
-        <div class="rando">Some random info</div>
+        <div class="rando">We got what you need!</div>
         <div class="pic-info">
           <div class="boxes">
-            <div class="box-1">box one</div>
-            <div class="box-2">box two</div>
-            <div class="box-3">box three</div>
-            <div class="box-4">box four</div>
+            <img class="box-1" src="./images/skateboard.jpg" alt="skateboards" height="200" width="200">
+            <img class="box-2" src="./images/longboards.jpg" alt="longboards" height="200" width="200">
+            <img class="box-3" src="./images/wheels.jpg" alt="wheels" height="200" width="200">
+            <img class="box-4" src="./images/skate-clothes.jpg" alt="skate skate clothes" height="200" width="200">
           </div>
           <div class="words">
-            <div class="exp-1">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
-            <div class="exp-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
-            <div class="exp-3">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
-            <div class="exp-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Similique deserunt</div>
+            <div class="exp-1">Choose from plenty of different pre-built boards, with different shapes, sizes, and styles</div>
+            <div class="exp-2">Wanna go cruise around town? We've got tons of different long boards to suit your needs</div>
+            <div class="exp-3">You can go the DIY route and choose from many different parts to fully customize your ride</div>
+            <div class="exp-4">You gotta ride in style. We've got a large variety of clothes to make sure you're looking good</div>
           </div>
         </div>
     </div>
     <div class="body-3">
       <div class="mass">
-        <div class="quote">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste molestias ut eligendi soluta. Neque officia distinctio, enim magnam ullam facere id? Atque consequuntur facilis architecto recusandae quaerat facere odit nulla!</div>
-        <div class="credit">-booty man</div>
+        <div class="quote">Skateboarding is a big part of my life, and I'm always needing stuff. Whether it's new grip or a new deck, Slow Rollers is definitly the way to go. They always help me find exactly what I need.</div>
+        <div class="credit">-Abraham Lincoln</div>
       </div>
     </div>
     <div class="body-4">
       <div class="alert">
         <div class="text">
-          <div class="call">Call to action! It's time!</div>
-          <div class="call-subtext">Sign up for our product by clicking the button right over there!</div>
+          <div class="call">Who doesn't love free stuff?!</div>
+          <div class="call-subtext">Sign up for our rewards program and earn points for free stuff every time you shop!</div>
         </div>
         <button class="sign-up">Sign Up!</button>
       </div>
